--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hello Saya Master</h1>
-    <p>Gue mah Bismillah</p>
+    <p>Gue mah mau kuliah di UT</p>
 </body>
 </html>
